# Flatlist

./: io.pitfire.Flatlist.json  io.pitfire.Flatlist.json~  meson.build
data/: io.pitfire.Flatlist.appdata.xml.in  io.pitfire.Flatlist.desktop.in  io.pitfire.Flatlist.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: io.pitfire.Flatlist.data.gresource.xml  io.pitfire.Flatlist.src.gresource.xml  main.js  meson.build  window.js  window.ui  window.ui~
